k8s/exposure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations: {}
  name: bonsai-gateway
  namespace: bonsai
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: bonsai-gateway-proxy-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: bonsai.local
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: bonsai.local
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: frontend-tls
        mode: Terminate
