k8s/exposure/gateway/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: bonsai
spec:
  hostnames:
    - bonsai.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bonsai-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: frontend
          port: 5114
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
