k8s/exposure/gateway/gardeners-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gardeners-route
  namespace: bonsai
spec:
  hostnames:
    - bonsai.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bonsai-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gardeners
          port: 4003
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
        - path:
            type: PathPrefix
            value: /api/v1/faculty
        - path:
            type: PathPrefix
            value: /api/v1/student
