k8s/exposure/gateway/grove-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grove-route
  namespace: bonsai
spec:
  hostnames:
    - bonsai.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bonsai-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grove
          port: 4001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/book
        - path:
            type: PathPrefix
            value: /api/v1/storage
