k8s/exposure/gateway/tending-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tending-route
  namespace: bonsai
spec:
  hostnames:
    - bonsai.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: bonsai-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tending
          port: 4002
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/fine
        - path:
            type: PathPrefix
            value: /api/v1/loan
